height auto + titles on mobile + wave animation with gsap + fix animation lines

--- a/src/components/Experiences/styles.scss
+++ b/src/components/Experiences/styles.scss
@@ -124,7 +124,7 @@ body.--dark {
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 460px) {
 
   .experiences-wrapper .line .experience-details p {
     font-size: 12px;
