--- a/src/components/PageProject/styles.scss
+++ b/src/components/PageProject/styles.scss
@@ -86,6 +86,7 @@
 
     .tags {
       display: inline-flex;
+      flex-wrap: wrap;
       gap: 8px;
     }
 
